another way to show or hide part of a page using hidden html property

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
-<div *ngIf="courses.length > 0; then coursesList else noCourses"></div>
-<ng-template #coursesList>
-      List of Courses
-</ng-template>
-<ng-template #noCourses>
+<div [hidden]="courses.length == 0">
+      List of courses
+</div>
+<div [hidden]="courses.length > 0">
       No courses yet
-</ng-template>
-<!-- angular 4 allows if else approach using ng-template
-in the div the condition is before the ';'. Clean and consistent-->
+</div>
