--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<button (click)="loadCourses()">Load Courses</button>
-<ul>
-      <li *ngFor="let course of courses; trackBy: trackCourse">
-            {{ course.name }}
-      </li>
-</ul>
+<button 
+      [ngStyle]="{
+            'backgroundColor': canSave ? 'blue' : 'gray',
+            'color': canSave ? 'white' : 'black',
+            'fontWeight':canSave ? 'bold' : 'normal'
+      }">
+      Save
+</button>
