--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "../src/assets/glyphicons/glyphicons.css";
 body { padding: 20px; }
+
+.form-control.ng-touched.ng-invalid {
+    border: 2px solid red;
+}
